# sqlite-compactor

./: .pre-commit-config.yaml  Dockerfile  README.md  compactor.py  main.py  pyproject.toml  renovate.json
.github/workflows/: docker-publish.yml
sqlite-compactor/: compactor.py  main.py  query_builder.py
